--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   <h2>Humidity Statistics:</h2>
   <p id="humidityStats">Loading...</p>
   <canvas id="humidityChart"></canvas>
-    
+    <script>
+         fetch('data.txt')
+      .then(response => response.text())
+      .then(data => processData(data))
+      .catch(error => {
+        console.error('Error reading the file:', error);
+      });
+      
+    </script>
 </body>
 </html>
