displayTemp function start

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
       plotHumidityChart(humidities);
     }
 
+    function displayTemperatureStats(temperatures) {
+      
+    }
+
     </script>
 </body>
 </html>
