--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
             return sum / data.length;
         }
 
+        function plotTemperatureChart(temperatures) {
+      
+    }
+
     </script>
 </body>
 
