--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
         ]
       };
 
+      new Chart(temperatureChartCanvas, {
+        type: 'line',
+        data: data,
+        options: {
+          responsive: true,
+          plugins: {
+            legend: {
+              display: false
+            }
+          }
+        }
+      });
+
      
             }
 
