--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>Data Results</h1>
+    <h1>Greenhouse Vanguard Data Results</h1>
     <h2>Temperature Statistics:</h2>
     <p id="temperatureStats">Loading...</p>
     <canvas id="temperatureChart"></canvas>
