--- a/index.html
+++ b/index.html
@@ -130,6 +130,19 @@
         ]
       };
 
+      new Chart(humidityChartCanvas, {
+        type: 'line',
+        data: data,
+        options: {
+          responsive: true,
+          plugins: {
+            legend: {
+              display: false
+            }
+          }
+        }
+      });
+
      
     }
 
